kubernetes/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: opsguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      imagePullSecrets:
        - name: ghcr-pull   # imagen privada en GHCR (ver README)
      containers:
        - name: postgres
          image: ghcr.io/beonit-la/opsguar-notifier-business-db:2.0.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "opsguard", "-d", "opsguard"]
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: opsguard
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
